--- a/FP1C4 - 03 Interfaces Gráficas/01 Locadora de Veiculos/src/br/edu/ifsp/pep/locadoraveiculo/visao/VeiculoView.form
+++ b/FP1C4 - 03 Interfaces Gráficas/01 Locadora de Veiculos/src/br/edu/ifsp/pep/locadoraveiculo/visao/VeiculoView.form
@@ -10,7 +10,7 @@
       <Dimension value="[620, 420]"/>
     </Property>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[620, 420]"/>
+      <Dimension value="[630, 430]"/>
     </Property>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
@@ -47,7 +47,7 @@
               <Component id="painelTitulo" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="tabPainel" min="-2" pref="348" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="8" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -123,7 +123,7 @@
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jScrollPane1" pref="589" max="32767" attributes="0"/>
+                          <Component id="jScrollPane1" pref="592" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Component id="labelDescricao" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -375,7 +375,7 @@
                                       <Component id="comboTipoVeiculo" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace min="0" pref="216" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="219" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
