--- a/FP1C4 - 03 Interfaces Gráficas/01 Locadora de Veiculos/src/br/edu/ifsp/pep/locadoraveiculo/visao/TipoVeiculoView.form
+++ b/FP1C4 - 03 Interfaces Gráficas/01 Locadora de Veiculos/src/br/edu/ifsp/pep/locadoraveiculo/visao/TipoVeiculoView.form
@@ -108,10 +108,10 @@
                   <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
                   <Component id="separadorTitulo" min="-2" pref="10" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="labelNome" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="btnPesquisar" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
                       <Component id="txtNome" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
+                      <Component id="labelNome" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -281,16 +281,13 @@
                           <Component id="btnCancelar" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                           <Component id="btnGravar" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                       </Group>
-                      <Group type="102" attributes="0">
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="btnInserir" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                              <Component id="btnAlterar" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                              <Component id="btnExcluir" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="btnInserir" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                          <Component id="btnAlterar" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                          <Component id="btnExcluir" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
